# rusty

./: .drone.yml  Cargo.toml  Dockerfile  README.md
ci/: release.sh
src/: config.rs  main.rs  models.rs  routes.rs
